Fixed z-index of viewTrip and description in card 3;

--- a/css/scss/cardDesign.scss
+++ b/css/scss/cardDesign.scss
@@ -187,6 +187,7 @@
   background-size: cover;
 
   &__description {
+    z-index: 1;
     @include flex(row, space-between, center);
     margin: 1rem 0;
     padding: 0 1rem;
@@ -196,6 +197,7 @@
 
   /* View Trip Button */
   .card__viewTrip {
+    z-index: 1;
     padding: 0.5rem 1rem;
     background-image: linear-gradient(
       to right,
@@ -218,7 +220,7 @@
   &__artWord {
     position: absolute;
     bottom: 0;
-    z-index: -1;
+    z-index: 0;
     font-size: 10rem;
     color: $--card-text-white;
     opacity: 0.1;
